--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.6.1",
-    "google-auth-library": "^6.0.6",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
+    "node-fetch": "^2.6.1",
     "uuid": "^8.3.0"
   }
 }
