--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "mongoose": "^5.10.2",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.6.3",
+    "request": "^2.88.2"
   }
 }
